- add a right margin value to avoid the vertical scrollbar overlapping the canvas - improve (re)drawing speed
git-svn-id: http://root.cern.ch/svn/root/trunk@47266 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/js/JSRootIO/style/JSRootInterface.css
+++ b/js/JSRootIO/style/JSRootInterface.css
@@ -63,7 +63,7 @@ input.tb {
 .ui-icon-triangle-1-s { background-position: -64px -16px; }
 
 .ui-accordion { 
-   width: 100%;
+   width: 100%; margin-right: 15px;
 }
 .ui-accordion-header {
    background-color: #c0c8ff;
